--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -9,7 +9,7 @@ spring:
     baselineOnMigrate: true
   jpa:
     hibernate:
-     ddl-auto: update
+     ddl-auto: validate
 management:
   endpoints:
     web:
